array.island.Island.scala.error
Erreur de compilation :
Island:3: error: not found: value l
  l=num.size
  ^Island:5: error: not found: value l
  for (k<-1 to l){
               ^